--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   intl: ^0.18.0
   step_progress_indicator: ^1.0.2
   win32: ^5.5.4
+  network_info_plus: ^6.0.1
+  permission_handler: ^11.3.1
+  geolocator: ^13.0.1
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
