--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   permission_handler: ^11.3.1
   geolocator: ^13.0.1
   geocoding: ^3.0.0
+  image_picker: ^1.1.1
+
 
 dev_dependencies:
   flutter_lints: ^2.0.0
